--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,12 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.3.3",
     "pettingzoo>=1.25.0",
+    "posix-ipc>=1.3.2",
     "scikit-learn>=1.8.0",
     "supersuit>=3.10.0",
+    "tensorboard>=2.20.0",
     "torch==2.8.0",
+    "torch-geometric>=2.7.0",
     "torchvision==0.23.0",
 ]
 
