--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "torch==2.8.0",
     "torch-geometric>=2.7.0",
     "torchvision==0.23.0",
+    "wandb>=0.23.1",
 ]
 
 [[tool.uv.index]]
