--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
+    "ipykernel>=7.1.0",
     "pandas>=2.3.3",
     "pettingzoo>=1.25.0",
     "posix-ipc>=1.3.2",
